# grambot

./: Cargo.toml  README.md
examples/: entities.rs  get_chat.rs  get_me.rs  get_updates.rs  local_server.rs  readme.rs  reply_markup.rs  send_chat_action.rs  send_dice.rs  send_message.rs  stream_updates.rs
src/: bot.rs  builders.rs  consts.rs  error.rs  lib.rs  methods.rs  output.rs  response.rs  shared.rs  stream.rs  traits.rs  types.rs  update.rs
src/bot/: builder.rs  mod.rs
src/builders/: forward_message.rs  get_updates.rs  send_dice.rs  send_message.rs
src/methods/: close.rs  forward_message.rs  get_chat.rs  get_me.rs  get_updates.rs  log_out.rs  mod.rs  send_chat_action.rs  send_dice.rs  send_message.rs  types.rs
src/methods/builders/: forward_message.rs  get_updates.rs  mod.rs  send_dice.rs  send_message.rs
src/methods/types/: allowed_update.rs  chat_id.rs  parse_mode.rs  reply_markup.rs
src/shared/: inline_keyboard_markup.rs  message_entity.rs  reply_keyboard_markup.rs  reply_keyboard_remove.rs  user.rs
src/types/: allowed_update.rs  auto_delete_timer_changed.rs  chat.rs  chat_action.rs  chat_id.rs  dice.rs  error.rs  errors.rs  force_reply.rs  inline_keyboard_button.rs  inline_keyboard_markup.rs  keyboard_button.rs  message.rs  message_entity.rs  message_id.rs  mod.rs  parse_mode.rs  reply_keyboard_markup.rs  reply_keyboard_remove.rs  reply_markup.rs  response.rs  target.rs  true.rs  update.rs  user.rs
