[package]
name = "grambot"
version = "0.1.0"
description = "Telegram Bot API library for Rust"
authors = ["Federico Damián Schonborn <fdschonborn>"]
license = "BSD-3-Clause"
repository = "https://github.com/FedericoSchonborn/grambot"
readme = "README.md"
publish = false
edition = "2021"

[dependencies]
hyper = { version = "0.14.18", features = ["http1", "client"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.2", features = ["macros", "rt"] }
